package de.ruu.lib.gen.java;

public interface JavaType
{
	boolean isArrayType();
	JavaType setArrayType(boolean isArrayType);
}